--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,4 +17,13 @@
   --color-stone-100: #f3e5d7;
   --color-brown-800: #854632;
   --color-white: #ffffff;
+
+  --spacing-100: 0.5rem;
+  --spacing-150: 0.75rem;
+  --spacing-200: 1rem;
+  --spacing-300: 1.5rem;
+  --spacing-400: 2rem;
+  --spacing-500: 2.5rem;
+  --spacing-600: 3rem;
+  --spacing-1600: 8rem;
 }
