feat: add breakpoints

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,9 @@
 }
 
 @theme {
+  --breakpoint-tb: 40em;
+  --breakpoint-dt: 64em;
+
   --font-sans: var(--font-outfit);
   --font-serif: var(--font-young-serif);
 
