feat: add border radius scale

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,9 @@
   --color-brown-800: #854632;
   --color-white: #ffffff;
 
+  --radius-150: 0.75rem;
+  --radius-300: 1.5rem;
+
   --spacing-100: 0.5rem;
   --spacing-150: 0.75rem;
   --spacing-200: 1rem;
