--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,7 @@
   --radius-150: 0.75rem;
   --radius-300: 1.5rem;
 
+  --spacing: 0.25rem;
   --spacing-100: 0.5rem;
   --spacing-150: 0.75rem;
   --spacing-200: 1rem;
